--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,22 @@
+/* reset  */
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 h3 {
     margin-bottom: 5px;
+}
+
+.container{
+    width: 100%;
+    margin-bottom: 20px;
 }
 
 .box {
     color: white;
     text-align: center;
-    padding: 15px;
+    padding: 10px;
 }
+
