--- a/css/12BoolFlex.css
+++ b/css/12BoolFlex.css
@@ -9,6 +9,11 @@
     border: 1px solid white;
 }
 
+.offset {
+    flex-grow: 1;
+    background-color: white;
+}
+
 /* colonne  */
 .col-xs-1 {
     flex-basis: calc((100% / 12) * 1);
