--- a/css/12BoolFlex.css
+++ b/css/12BoolFlex.css
@@ -1,18 +1,8 @@
 /* common  */
 .row {
-    width: 100%;
-    height: 40px;
-    background-color: #006cfa;
+    /* width: 100%; */
+    min-height: 40px;
     display: flex;
-}
-
-[class*="col-"] {
-    border: 1px solid white;
-}
-
-.offset {
-    flex-grow: 1;
-    background-color: white;
 }
 
 /* colonne  */
@@ -63,3 +53,56 @@
 .col-xs-12 {
     flex-basis: 100%;
 }
+
+/* Offset  */
+
+.col-offset-1 {
+    margin-left: calc((100% / 12) * 1);
+}
+
+.col-offset-2 {
+    margin-left: calc((100% / 12) * 2);
+}
+
+.col-offset-3 {
+    margin-left: calc((100% / 12) * 3);
+}
+
+.col-offset-4 {
+    margin-left: calc((100% / 12) * 4);
+}
+
+.col-offset-5 {
+    margin-left: calc((100% / 12) * 5);
+}
+
+.col-offset-6 {
+    margin-left: calc((100% / 12) * 6);
+}
+
+.col-offset-7 {
+    margin-left: calc((100% / 12) * 7);
+}
+
+.col-offset-8 {
+    margin-left: calc((100% / 12) * 8);
+}
+
+.col-offset-9 {
+    margin-left: calc((100% / 12) * 9);
+}
+
+.col-offset-10 {
+    margin-left: calc((100% / 12) * 10);
+}
+
+.col-offset-11 {
+    margin-left: calc((100% / 12) * 11);
+}
+
+/* Alternativa Offset
+
+.offset {
+    flex-grow: 1;
+    background-color: white;
+} */
