--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ h3 {
     margin-bottom: 20px;
 }
 
+[class*="col-"] {
+    border: 1px solid white;
+    background-color: #006cfa;
+}
+
 .box {
     color: white;
     text-align: center;
