Aggiunto responsive con media queries

--- a/css/12BoolFlex.css
+++ b/css/12BoolFlex.css
@@ -1,11 +1,10 @@
 /* common  */
 .row {
-    /* width: 100%; */
     min-height: 40px;
     display: flex;
 }
 
-/* colonne  */
+/* Colonne XS per visualizzazione da smartphones*/
 .col-xs-1 {
     flex-basis: calc((100% / 12) * 1);
 }
@@ -54,49 +53,240 @@
     flex-basis: 100%;
 }
 
-/* Offset  */
+/* Colonne MD per visualizzazione da tablet */
+.col-md-1 {
+    flex-basis: calc((100% / 12) * 1);
+}
 
-.col-offset-1 {
+.col-md-2 {
+    flex-basis: calc((100% / 12) * 2);
+}
+
+.col-md-3 {
+    flex-basis: calc((100% / 12) * 3);
+}
+
+.col-md-4 {
+    flex-basis: calc((100% / 12) * 4);
+}
+
+.col-md-5 {
+    flex-basis: calc((100% / 12) * 5);
+}
+
+.col-md-6 {
+    flex-basis: calc((100% / 12) * 6);
+}
+
+.col-md-7 {
+    flex-basis: calc((100% / 12) * 7);
+}
+
+.col-md-8 {
+    flex-basis: calc((100% / 12) * 8);
+}
+
+.col-md-9 {
+    flex-basis: calc((100% / 12) * 9);
+}
+
+.col-md-10 {
+    flex-basis: calc((100% / 12) * 10);
+}
+
+.col-md-11 {
+    flex-basis: calc((100% / 12) * 11);
+}
+
+.col-md-12 {
+    flex-basis: 100%;
+}
+
+/* Colonne LG per visualizzazione desktop  */
+.col-lg-1 {
+    flex-basis: calc((100% / 12) * 1);
+}
+
+.col-lg-2 {
+    flex-basis: calc((100% / 12) * 2);
+}
+
+.col-lg-3 {
+    flex-basis: calc((100% / 12) * 3);
+}
+
+.col-lg-4 {
+    flex-basis: calc((100% / 12) * 4);
+}
+
+.col-lg-5 {
+    flex-basis: calc((100% / 12) * 5);
+}
+
+.col-lg-6 {
+    flex-basis: calc((100% / 12) * 6);
+}
+
+.col-lg-7 {
+    flex-basis: calc((100% / 12) * 7);
+}
+
+.col-lg-8 {
+    flex-basis: calc((100% / 12) * 8);
+}
+
+.col-lg-9 {
+    flex-basis: calc((100% / 12) * 9);
+}
+
+.col-lg-10 {
+    flex-basis: calc((100% / 12) * 10);
+}
+
+.col-lg-11 {
+    flex-basis: calc((100% / 12) * 11);
+}
+
+.col-lg-12 {
+    flex-basis: 100%;
+}
+
+
+/* Offset XS */
+
+.col-xs-offset-1 {
     margin-left: calc((100% / 12) * 1);
 }
 
-.col-offset-2 {
+.col-xs-offset-2 {
     margin-left: calc((100% / 12) * 2);
 }
 
-.col-offset-3 {
+.col-xs-offset-3 {
     margin-left: calc((100% / 12) * 3);
 }
 
-.col-offset-4 {
+.col-xs-offset-4 {
     margin-left: calc((100% / 12) * 4);
 }
 
-.col-offset-5 {
+.col-xs-offset-5 {
     margin-left: calc((100% / 12) * 5);
 }
 
-.col-offset-6 {
+.col-xs-offset-6 {
     margin-left: calc((100% / 12) * 6);
 }
 
-.col-offset-7 {
+.col-xs-offset-7 {
     margin-left: calc((100% / 12) * 7);
 }
 
-.col-offset-8 {
+.col-xs-offset-8 {
     margin-left: calc((100% / 12) * 8);
 }
 
-.col-offset-9 {
+.col-xs-offset-9 {
     margin-left: calc((100% / 12) * 9);
 }
 
-.col-offset-10 {
+.col-xs-offset-10 {
     margin-left: calc((100% / 12) * 10);
 }
 
-.col-offset-11 {
+.col-xs-offset-11 {
+    margin-left: calc((100% / 12) * 11);
+}
+
+/* Offset MD */
+
+.col-md-offset-1 {
+    margin-left: calc((100% / 12) * 1);
+}
+
+.col-md-offset-2 {
+    margin-left: calc((100% / 12) * 2);
+}
+
+.col-md-offset-3 {
+    margin-left: calc((100% / 12) * 3);
+}
+
+.col-md-offset-4 {
+    margin-left: calc((100% / 12) * 4);
+}
+
+.col-md-offset-5 {
+    margin-left: calc((100% / 12) * 5);
+}
+
+.col-md-offset-6 {
+    margin-left: calc((100% / 12) * 6);
+}
+
+.col-md-offset-7 {
+    margin-left: calc((100% / 12) * 7);
+}
+
+.col-md-offset-8 {
+    margin-left: calc((100% / 12) * 8);
+}
+
+.col-md-offset-9 {
+    margin-left: calc((100% / 12) * 9);
+}
+
+.col-md-offset-10 {
+    margin-left: calc((100% / 12) * 10);
+}
+
+.col-md-offset-11 {
+    margin-left: calc((100% / 12) * 11);
+}
+
+/* Offset XS */
+
+.col-lg-offset-1 {
+    margin-left: calc((100% / 12) * 1);
+}
+
+.col-lg-offset-2 {
+    margin-left: calc((100% / 12) * 2);
+}
+
+.col-lg-offset-3 {
+    margin-left: calc((100% / 12) * 3);
+}
+
+.col-lg-offset-4 {
+    margin-left: calc((100% / 12) * 4);
+}
+
+.col-lg-offset-5 {
+    margin-left: calc((100% / 12) * 5);
+}
+
+.col-lg-offset-6 {
+    margin-left: calc((100% / 12) * 6);
+}
+
+.col-lg-offset-7 {
+    margin-left: calc((100% / 12) * 7);
+}
+
+.col-lg-offset-8 {
+    margin-left: calc((100% / 12) * 8);
+}
+
+.col-lg-offset-9 {
+    margin-left: calc((100% / 12) * 9);
+}
+
+.col-lg-offset-10 {
+    margin-left: calc((100% / 12) * 10);
+}
+
+.col-lg-offset-11 {
     margin-left: calc((100% / 12) * 11);
 }
 
