--- a/css/12BoolFlex.css
+++ b/css/12BoolFlex.css
@@ -1,7 +1,8 @@
 /* common  */
-.row {
+.container .row {
     min-height: 40px;
     display: flex;
+    /* flex-wrap: wrap; */
 }
 
 /* Colonne XS per visualizzazione da smartphones*/
@@ -50,7 +51,7 @@
 }
 
 .col-xs-12 {
-    flex-basis: 100%;
+    flex-basis: calc((100% / 12) * 12);
 }
 
 /* Colonne MD per visualizzazione da tablet */
@@ -99,7 +100,7 @@
 }
 
 .col-md-12 {
-    flex-basis: 100%;
+    flex-basis: calc((100% / 12) * 12);
 }
 
 /* Colonne LG per visualizzazione desktop  */
@@ -148,12 +149,11 @@
 }
 
 .col-lg-12 {
-    flex-basis: 100%;
+    flex-basis: calc((100% / 12) * 12);
 }
 
 
 /* Offset XS */
-
 .col-xs-offset-1 {
     margin-left: calc((100% / 12) * 1);
 }
@@ -196,6 +196,10 @@
 
 .col-xs-offset-11 {
     margin-left: calc((100% / 12) * 11);
+}
+
+.col-xs-offset-11 {
+    margin-left: calc((100% / 12) * 12);
 }
 
 /* Offset MD */
@@ -244,6 +248,10 @@
     margin-left: calc((100% / 12) * 11);
 }
 
+.col-md-offset-12 {
+    margin-left: calc((100% / 12) * 12);
+}
+
 /* Offset XS */
 
 .col-lg-offset-1 {
@@ -290,6 +298,9 @@
     margin-left: calc((100% / 12) * 11);
 }
 
+.col-lg-offset-12 {
+    margin-left: calc((100% / 12) * 12);
+}
 /* Alternativa Offset
 
 .offset {
