--- a/css/12BoolFlexResponsive.css
+++ b/css/12BoolFlexResponsive.css
@@ -1,39 +1,163 @@
-@media screen and (max-width: 480px) {
-    .container .row .col-xs-1,
-    .container .row .col-xs-2,
-    .container .row .col-xs-3,
-    .container .row .col-xs-4,
-    .container .row .col-xs-5,
-    .container .row .col-xs-6,
-    .container .row .col-xs-7,
-    .container .row .col-xs-8,
-    .container .row .col-xs-9,
-    .container .row .col-xs-10,
-    .container .row .col-xs-11,
-    .container .row .col-xs-12 {
-        background-color: red;
+/* visualizzazione smartphones */
+@media screen and (max-width: 767px) {
+
+    .container .row {
+         flex-wrap: wrap; 
+    }
+  
+    .col-xs-1 {
+        flex-basis: calc((100% / 12) * 1);
+    }
+    
+    .col-xs-2 {
+        flex-basis: calc((100% / 12) * 2);
+    }
+    
+    .col-xs-3 {
+        flex-basis: calc((100% / 12) * 3);
+    }
+    
+    .col-xs-4 {
+        flex-basis: calc((100% / 12) * 4);
+    }
+    
+    .col-xs-5 {
+        flex-basis: calc((100% / 12) * 5);
+    }
+    
+    .col-xs-6 {
+        flex-basis: calc((100% / 12) * 6);
+    }
+    
+    .col-xs-7 {
+        flex-basis: calc((100% / 12) * 7);
+    }
+    
+    .col-xs-8 {
+        flex-basis: calc((100% / 12) * 8);
+    }
+    
+    .col-xs-9 {
+        flex-basis: calc((100% / 12) * 9);
+    }
+    
+    .col-xs-10 {
+        flex-basis: calc((100% / 12) * 10);
+    }
+    
+    .col-xs-11 {
+        flex-basis: calc((100% / 12) * 11);
+    }
+    
+    .col-xs-12 {
+        flex-basis: calc((100% / 12) * 12);
     }
 }
 
-@media screen and (min-width: 481px) and (max-width: 767px) {
-    .container .row .col-md-1,
-    .container .row .col-md-2,
-    .container .row .col-md-3,
-    .container .row .col-md-4,
-    .container .row .col-md-5,
-    .container .row .col-md-6,
-    .container .row .col-md-7,
-    .container .row .col-md-8,
-    .container .row .col-md-9,
-    .container .row .col-md-10,
-    .container .row .col-md-11,
-    .container .row .col-md-12 {
-        background-color: green;
+/* visualizzazione tablets */
+@media screen and (min-width: 768px) and (max-width: 991px) {
+    
+    .container .row {
+        flex-wrap: wrap; 
+   }
+
+    .col-md-1 {
+        flex-basis: calc((100% / 12) * 1);
+    }
+    
+    .col-md-2 {
+        flex-basis: calc((100% / 12) * 2);
+    }
+    
+    .col-md-3 {
+        flex-basis: calc((100% / 12) * 3);
+    }
+    
+    .col-md-4 {
+        flex-basis: calc((100% / 12) * 4);
+    }
+    
+    .col-md-5 {
+        flex-basis: calc((100% / 12) * 5);
+    }
+    
+    .col-md-6 {
+        flex-basis: calc((100% / 12) * 6);
+    }
+    
+    .col-md-7 {
+        flex-basis: calc((100% / 12) * 7);
+    }
+    
+    .col-md-8 {
+        flex-basis: calc((100% / 12) * 8);
+    }
+    
+    .col-md-9 {
+        flex-basis: calc((100% / 12) * 9);
+    }
+    
+    .col-md-10 {
+        flex-basis: calc((100% / 12) * 10);
+    }
+    
+    .col-md-11 {
+        flex-basis: calc((100% / 12) * 11);
+    }
+    
+    .col-md-12 {
+        flex-basis: calc((100% / 12) * 12);
     }
 }
 
-@media screen and (min-width: 768px) {
-    [class*="col-"] {
-            background-color: #006cfa;
+/* visualizzazione desktops */
+@media screen and (min-width: 992px) {
+
+    .col-lg-1 {
+        flex-basis: calc((100% / 12) * 1);
+    }
+    
+    .col-lg-2 {
+        flex-basis: calc((100% / 12) * 2);
+    }
+    
+    .col-lg-3 {
+        flex-basis: calc((100% / 12) * 3);
+    }
+    
+    .col-lg-4 {
+        flex-basis: calc((100% / 12) * 4);
+    }
+    
+    .col-lg-5 {
+        flex-basis: calc((100% / 12) * 5);
+    }
+    
+    .col-lg-6 {
+        flex-basis: calc((100% / 12) * 6);
+    }
+    
+    .col-lg-7 {
+        flex-basis: calc((100% / 12) * 7);
+    }
+    
+    .col-lg-8 {
+        flex-basis: calc((100% / 12) * 8);
+    }
+    
+    .col-lg-9 {
+        flex-basis: calc((100% / 12) * 9);
+    }
+    
+    .col-lg-10 {
+        flex-basis: calc((100% / 12) * 10);
+    }
+    
+    .col-lg-11 {
+        flex-basis: calc((100% / 12) * 11);
+    }
+    
+    .col-lg-12 {
+        flex-basis: calc((100% / 12) * 12);
     }
 }
