--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,15 @@
 h3 {
     margin-bottom: 5px;
 }
-
+/* common  */
 .container{
     width: 100%;
     margin-bottom: 20px;
+}
+
+.row {
+    min-height: 40px;
+    display: flex;
 }
 
 [class*="col-"] {
